--- a/package.json
+++ b/package.json
@@ -10,36 +10,43 @@
     "seed": "npx sequelize-cli db:seed:all",
     "test": "jest"
   },
-  "keywords": ["facturación", "api", "express", "postgresql", "hacienda"],
+  "keywords": [
+    "facturación",
+    "api",
+    "express",
+    "postgresql",
+    "hacienda"
+  ],
   "author": "DataBytes",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "sequelize": "^6.35.0",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "boxen": "^8.0.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "winston": "^3.11.0",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "dotenv": "^16.3.1",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0",
-    "crypto": "^1.0.1",
-    "xml2js": "^0.6.2",
-    "moment": "^2.29.4",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "sequelize-cli": "^6.6.2",
-    "jest": "^29.7.0",
     "supertest": "^6.3.3"
   }
 }
